--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a href="https://iexpo-ss21.github.io/iexpo-ss21/">
+          <a href="https://informatik-mannheim.github.io/iExpo-Sommer-2021/">
             <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           </a>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
